instantnoodlep: overlay: increase power menu tiles
4 for portrait
5 for landscape

Change-Id: Ib2ed6ff35fe409f818f067c069bf7d899a3f0fdd

--- a/overlay-aicp/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-aicp/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -33,4 +33,7 @@
     <!-- Show camera affordance on Keyguard -->
     <bool name="config_keyguardShowCameraAffordance">true</bool>
 
+    <!-- Power Menu Columns in Portrait Mode -->
+    <integer name="power_menu_max_columns">4</integer>
+
 </resources>
