op8Pro: Define infrared proximity sensor for pocket detection
OnePlus pocket sensor is broken on Android 11 custom ROMs.
Blinking dot can be seen on screen, but this is better than nothing.

Signed-off-by: baalajimaestro <me@baalajimaestro.me>
Change-Id: Ie6e8c8d025316a9e482ff840c857b64ff58377e7

--- a/overlay-aicp/device/oneplus/settings/doze/res/values/config.xml
+++ b/overlay-aicp/device/oneplus/settings/doze/res/values/config.xml
@@ -15,4 +15,5 @@
 -->
 <resources>
     <string name="vendorPickupSensor" translatable="false">oneplus.sensor.op_motion_detect</string>
+    <string name="vendorPocketSensor" translatable="false">oneplus.sensor.infrared.proximity</string>
 </resources>
